// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form empty 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  className="c0"
>
  <form
    onReset={[Function]}
    onSubmit={[Function]}
  />
</div>
`;

exports[`Form regexp validation 1`] = `
.c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #FF4040;
}

<span
  class="c0"
>
  invalid
</span>
`;

exports[`Form required validation 1`] = `
.c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #FF4040;
}

<span
  class="c0"
>
  required
</span>
`;

exports[`Form update 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0px;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  -webkit-transition: 0.1s ease-in-out;
  transition: 0.1s ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  padding: 11px;
  outline: none;
  background: transparent;
  color: inherit;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  width: 100%;
  border: none;
}

.c4::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 0px;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test2"
            placeholder="test-2 input"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form with field 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin: 0px;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0px;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  padding: 11px;
  outline: none;
  background: transparent;
  color: inherit;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  width: 100%;
  border: none;
}

.c4::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 0px;
  }
}

<div
  className="c0"
>
  <form
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <input
            autoComplete="off"
            className="c4"
            name="test"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
